# sort-pyproject-hook

./: .gitignore  .pre-commit-hooks.yaml  LICENSE  README.md  pyproject.toml
hooks/: sort-pyproject.py  sort_pyproject.py
